# openmp-cholesky-factorization

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: README.md  benchmark_cholesky.cpp  build_info.h.in  cholesky_benchmark_suite.cpp  cholesky_benchmark_support.cpp  cholesky_benchmark_support.h  run_all_versions.sh  run_version.sh
example/: main.cpp
history/: README.md
history/results/cholesky_v0_baseline/: against_v1.txt  correctness.txt  metadata.txt  omp_consistency.txt  perf_basic.csv  perf_basic.txt  reference_logdet.csv  reference_logdet.txt  schedule_study.csv  schedule_study.txt  stability.txt  summary.txt  sweeps.csv  thread_scaling.csv  thread_scaling.txt  time_coarse.txt  time_fine.txt  time_large.txt
history/results/cholesky_v1_serial_opt/: against_v1.txt  metadata.txt  omp_consistency.txt  perf_basic.csv  perf_basic.txt  reference_logdet.csv  reference_logdet.txt  schedule_study.csv  schedule_study.txt  stability.txt  summary.txt  sweeps.csv  thread_scaling.csv  thread_scaling.txt  time_coarse.txt  time_fine.txt  time_large.txt
history/results/cholesky_v2_serial_blocked/: against_v1.txt  metadata.txt  omp_consistency.txt  perf_basic.csv  perf_basic.txt  reference_logdet.csv  reference_logdet.txt  schedule_study.csv  schedule_study.txt  stability.txt  summary.txt  sweeps.csv  thread_scaling.csv  thread_scaling.txt  time_coarse.txt  time_fine.txt  time_large.txt
history/results/cholesky_v3_openmp/: against_v1.txt  correctness.txt  metadata.txt  omp_consistency.txt  perf_basic.csv  perf_basic.txt  reference_logdet.csv  reference_logdet.txt  schedule_study.csv  schedule_study.txt  stability.txt  summary.txt  sweeps.csv  thread_scaling.csv  thread_scaling.txt  thread_scaling_extended.csv  thread_scaling_extended.txt  time_coarse.txt  time_fine.txt  time_large.txt
history/results/cholesky_v4_parallel_opt/: against_v1.txt  metadata.txt  omp_consistency.txt  perf_basic.csv  perf_basic.txt  reference_logdet.csv  reference_logdet.txt  schedule_study.csv  schedule_study.txt  stability.txt  summary.txt  sweeps.csv  thread_scaling.csv  thread_scaling.txt  thread_scaling_extended.csv  thread_scaling_extended.txt  time_coarse.txt  time_fine.txt  time_large.txt
history/versions/cholesky_v0_baseline/src/: cholesky.cpp
history/versions/cholesky_v1_serial_opt/src/: cholesky.cpp
history/versions/cholesky_v2_serial_blocked/include/: cholesky.h
history/versions/cholesky_v2_serial_blocked/src/: cholesky.cpp
history/versions/cholesky_v3_openmp/src/: cholesky.cpp
history/versions/cholesky_v4_parallel_opt/src/: cholesky.cpp
include/: mphil_dis_cholesky.h
perf_analysis/: FIGURE_PLAN.md  README.md  generate_code_appendix.py  run_all.py
perf_analysis/output/: figure_index.md
perf_analysis/output/tables/: appendix_code_versions.tex  cholesky_v3_openmp_thread_scaling_extended_metrics.csv  cholesky_v4_parallel_opt_thread_scaling_extended_metrics.csv  thread_scaling_extended_appendix_tables.tex
perf_analysis/perf_analysis/: __init__.py  data_loader.py  generate.py  paths.py  plots.py  style.py  thread_scaling_appendix.py
scripts/: print_result_summary.py  run_release_all_versions.sh  run_release_suite.sh
scripts/csd3/: example.sh  example.slurm  run_all_versions.sh  run_all_versions.slurm  run_version.sh  run_version.slurm  v0.sh  v0.slurm  v1.sh  v1.slurm  v2.sh  v2.slurm  v3.sh  v3.slurm  v4.sh  v4.slurm
src/: cholesky.cpp
test/: README.md  cholesky_test_suite.cpp  cholesky_test_suite.h  cholesky_v1_reference.cpp  cholesky_v1_reference.h  cholesky_v2_reference.cpp  cholesky_v2_reference.h  reference_compare.py  reference_logdet_driver.cpp  test_against_v1.cpp  test_cholesky.cpp  test_openmp_consistency.cpp  test_stability.cpp
